fix styling for table rows on small screens

--- a/react-app/src/components/BusinessRouter/BusinessRouter.css
+++ b/react-app/src/components/BusinessRouter/BusinessRouter.css
@@ -2,7 +2,7 @@
   position: relative;
   display: grid;
   grid-template-areas: "menu body";
-  grid-template-columns: 300px 1200px;
+  grid-template-columns: 300px 1fr;
   height: fit-content;
   max-width: 1500px;
   gap: 40px;
