--- a/react-app/src/components/BusinessRouter/CategoryManagementPage/CategoryManagementPage.css
+++ b/react-app/src/components/BusinessRouter/CategoryManagementPage/CategoryManagementPage.css
@@ -2,8 +2,8 @@
   padding: 20px 0px;
 }
 
-.category-table thead,
-.category-table tbody {
+.category-table thead tr,
+.category-table tbody tr {
   grid-template-columns: 100px 1fr 100px 100px;
 }
 
